--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -23,24 +23,37 @@ swiper-item image{
 .face image{
     width: 100%;
     height: 100%;
+    display: block;
 }
 .item-detail{
     height: 380rpx;
     width: 100%;
     white-space: nowrap;
+    background: white;
 }
 .img-item{
     height: 340rpx;
     width: 240rpx;
     display: inline-block;
     margin:  20rpx 0rpx 20rpx 20rpx;
+    position: relative;
 }
 .img-item:last-child{
     margin-right: 20rpx;
 }
+.img-item:after{
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border: 2rpx solid #f8f8f8;
+}
 .img-item image{
     height: 240rpx;
     width: 240rpx;
+    display: block;
 }
 .img-item .title{
     font-size: 24rpx;
