--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -41,13 +41,14 @@ swiper-item image{
 .img-item:last-child{
     margin-right: 20rpx;
 }
-.img-item:after{
+.img-item:before{
     content: '';
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
+    box-sizing: border-box;
     border: 2rpx solid #f8f8f8;
 }
 .img-item image{
