--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -11,14 +11,14 @@
                         <icon class="weui-icon-checkbox_success" type="success" size="23" wx:if="{{item.checked}}" data-index="{{index}}"></icon>
                     </view>
                     <view class="weui-cell__bd" data-index="{{index}}">
-                        <image class="sh_slt" src="{{item.imgUrl}}" data-index="{{index}}"></image>
+                        <image class="sh_slt" src="{{item.good.face_img}}" data-index="{{index}}"></image>
                         <view class="df_1" data-index="{{index}}">            
                             <view class="sp_text" data-index="{{index}}">
-                                <view class="sp_tit ovh1" data-index="{{index}}">{{item.name}}</view>
-                                <view class="sp_jg" data-index="{{index}}">¥：{{item.price}} <text class='rest' data-index="{{index}}">库存：{{item.total}}</text></view>
+                                <view class="sp_tit ovh1" data-index="{{index}}">{{item.good.name}}</view>
+                                <view class="sp_jg" data-index="{{index}}">¥：{{item.good.sale_price}} <text class='rest' data-index="{{index}}">库存：{{item.total}}</text></view>
                                 <view class="num" catchtap='stop' data-index="{{index}}">
                                     <view class="disnum" data-alpha-beta="0" data-index="{{index}}" bindtap="changeNum" data-index="{{index}}">-</view>
-                                    <view class="nownum" data-index="{{index}}">{{item.count}}</view>
+                                    <view class="nownum" data-index="{{index}}">{{item.num}}</view>
                                     <view class="addnum" data-alpha-beta="1" data-index="{{index}}" bindtap="changeNum" data-index="{{index}}">+</view>
                                 </view>
                             </view>
