--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -4,6 +4,7 @@ page{
 }
 .fl_l{ float: left;}
 .w10{ width: 10%;}
+.w15{ width: 15%;}
 .w20{ width: 20%;}
 .w30{ width: 30%;}
 .w40{ width: 40%;}
@@ -23,9 +24,23 @@ page{
 
 .white{  color: #fff;}
 .footfixed { 
-    display: block; position: fixed; bottom: 0; left: 0;
+    display: flex; flex-direction: row; position: fixed; bottom: 0; left: 0;
     background: #fff; z-index: 100; width:100%; font-size: 14px;
     line-height: 100rpx;
+}
+.footfixed:after{
+  content: '';
+  position:absolute;
+  right:0;
+  top:0;
+  height:2rpx;
+  bottom:0;
+  width:100%;
+  transform: scaleY(0.5);
+  background: #e9e9e9;
+}
+.footfixed .bt{
+   display: flex; flex-direction: row;
 }
 .font_16{  font-size: 16px;}
 .font_14{  font-size: 13px;}
@@ -61,7 +76,39 @@ page{
 .bbe{border-bottom: solid 1px #eee;}
 .bre{ border-right: 1px solid #eee}
 .ke{
-    text-align: center
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+}
+.ke contact-button{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left:  0;
+    top: 0;
+    opacity: 0;
+}
+.ke:after{
+  content: '';
+  position:absolute;
+  right:0;
+  top:0;
+  width:2rpx;
+  bottom:0;
+  height:100%;
+  transform: scaleX(0.5);
+  background: #e9e9e9;
+}
+.cart{
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
 }
 
 .pos{
@@ -73,11 +120,10 @@ page{
 .icon_kf{
     width: 40rpx;
     height: 40rpx;
-    display: inline-block;
-    margin-top: 10rpx;
+    display: block;
 }
 .dbtext{
-    line-height: 30rpx;
+    line-height: 40rpx;
     color: #666;
     font-size: 12px;
 }
