--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -1,6 +1,6 @@
 <!--pages/cart/cart.wxml-->
 <view class="page">
-    <view class='weui-cells'>
+    <scroll-view class='weui-cells' scroll-y wx:if="{{carts.length > 0}}">
         <checkbox-group bindchange="checkboxChange">
             <label class="weui-cell" wx:for="{{carts}}" wx:key="value">
                 <view class="inner shop" bindtouchstart="touchS" bindtouchmove="touchM" bindtouchend="touchE" data-index="{{index}}" style="{{item.txtStyle}}">
@@ -21,6 +21,7 @@
                                     <view class="nownum" data-index="{{index}}">{{item.num}}</view>
                                     <view class="addnum" data-alpha-beta="1" data-index="{{index}}" bindtap="changeNum" data-index="{{index}}">+</view>
                                 </view>
+                                <view class="select-pro">{{item.selectedProperties.value}}</view>
                             </view>
                         </view>
                     </view>
@@ -28,7 +29,7 @@
                 <view data-index="{{index}}" catchtap="delItem" class="del">删除</view>
             </label>
         </checkbox-group>
-    </view>
+    </scroll-view>
     
 
     <!--样式-->  
