--- a/pages/orderdetail/orderdetail.wxml
+++ b/pages/orderdetail/orderdetail.wxml
@@ -3,7 +3,7 @@
         <view class='inner'>
             <view class='o-title'>
                 <view class='img'>
-                <open-data type="userAvatarUrl" class="image"></open-data>
+                    <image bindtap='preview' mode="aspectFill" data-cate="main" src="{{detail ? detail.img : '/images/default@2x.png'}}"></image>
                 </view>
                 <view class='title'><open-data type="userNickName"></open-data></view>
             </view>
@@ -21,15 +21,15 @@
 
             <view class='o-item mt-color'>
                 <view class='left'>收货人</view>
-                <view class='right'>{{detail ? detail.address.userName : ''}}</view>
+                <view class='right'>{{address ? address.userName : ''}}</view>
             </view>
             <view class='o-item'>
                 <view class='left'>订单号</view>
-                <view class='right series_no'>{{detail ? detail.orderid : ''}}</view>
+                <view class='right series_no'>{{order ? order.orderid : ''}}</view>
             </view>
             <view class='o-item'>
                 <view class='left'>联系电话</view>
-                <view class='right'>{{detail ? detail.address.telNumber : ''}}</view>
+                <view class='right'>{{address ? address.telNumber : ''}}</view>
             </view>
             <view class='o-item'>
                 <view class='left'>下单时间</view>
@@ -37,7 +37,7 @@
             </view>
             <view class='o-item address'>
                 <view class='left'>收货地址</view>
-                <view class='right'>{{detail ? detail.address.provinceName + detail.address.cityName + detail.address.countyName + detail.address.detailInfo : ''}}</view>
+                <view class='right'>{{address ? address.provinceName + address.cityName + address.countyName + address.detailInfo : ''}}</view>
             </view>
 
 
